--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,43 +14,33 @@ jobs:
     environment: production
 
     steps:
-      - name: Checkout Repo
-        uses: actions/checkout@v2
+    - name: Checkout Repo
+      uses: actions/checkout@v2
 
-      - name: List files in the repository
-        run: ls -lah
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: '1.0.0'
 
-      - name: Change to Terraform Directory
-        run: cd ./infra/terraform
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+        aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1
-        with:
-          terraform_version: "1.0.0"
+    - name: Terraform Init
+      run: terraform init
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+    - name: Terraform Plan
+      run: |
+        terraform plan -out terraform.plan
+        terraform show -json terraform.plan > terraform.json
+        cat > terraform.json << 'EOM'
+        ${{ steps.show.outputs.stdout }}
+        EOM
 
-      - name: Terraform Init
-        run: terraform init
-        working-directory: ./infra/terraform
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_SESSION_TOKEN: ${{ secrets.AWS_SESSION_TOKEN }}
-          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-          TF_VAR_public_key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
-
-      - name: Terraform Plan
-        run: terraform plan
-        working-directory: ./infra/terraform
-
-      - name: Terraform Apply
-        run: terraform apply -auto-approve
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        working-directory: ./infra/terraform
+    - name: Terraform Apply
+      run: terraform apply -auto-approve -var="public_key=${{ env.PUBLIC_KEY }}"
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
