--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,33 +14,39 @@ jobs:
     environment: production
 
     steps:
-    - name: Checkout Repo
-      uses: actions/checkout@v2
+      - name: Checkout Repo
+        uses: actions/checkout@v2
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
-      with:
-        terraform_version: '1.0.0'
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: "1.0.0"
 
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
-        aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          aws-region: ${{ secrets.AWS_DEFAULT_REGION }}
 
-    - name: Terraform Init
-      run: terraform init
+      - name: Set SSH Key
+        run: |
+          echo "TF_VAR_public_key=${{ secrets.EC2_SSH_PRIVATE_KEY }}" >> $GITHUB_ENV
+      - name: Check Terraform Variables
+        run: echo "Public Key = $TF_VAR_public_key"
 
-    - name: Terraform Plan
-      run: |
-        terraform plan -out terraform.plan
-        terraform show -json terraform.plan > terraform.json
-        cat > terraform.json << 'EOM'
-        ${{ steps.show.outputs.stdout }}
-        EOM
+      - name: Terraform Init
+        run: terraform init
+        working-directory: ./infra/terraform
 
-    - name: Terraform Apply
-      run: terraform apply -auto-approve -var="public_key=${{ env.PUBLIC_KEY }}"
-      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+      - name: Terraform Plan
+        run: |
+          terraform plan -input=false -out=plan.tfout
+        working-directory: ./infra/terraform
+
+      - name: Terraform Apply
+        run: |
+          terraform apply -auto-approve plan.tfout
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        working-directory: ./infra/terraform
